--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
+    "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   }
 }
